samples/_failures_safe/1761376696_622165_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_393607ea.c: In function ‘main’:
./samples/SAFE/__tmp_393607ea.c:170:12: error: missing terminating " character
  170 |     printf("Enter text to tokenize:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_393607ea.c:170:5: error: expected expression at end of input
  170 |     printf("Enter text to tokenize:
      |     ^~~~~~
./samples/SAFE/__tmp_393607ea.c:170:5: error: expected declaration or statement at end of input
